--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 # Private individual user cursor rules
 .cursor/rules/_*.mdc
+# Build output
+build/
+*.vst3/
+*.so
+*.dylib
+*.exe
+
+# CMake cache
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+
+# JUCE extras
+JUCE-build/
